--- a/app/src/main/res/layout/item_equipo_tabla.xml
+++ b/app/src/main/res/layout/item_equipo_tabla.xml
@@ -105,6 +105,7 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/equipo_tabla_escudo"
         android:layout_width="20dp"
         android:layout_height="20dp"
         android:src="@drawable/hector_chavez"
