--- a/app/src/main/res/layout/item_goleador.xml
+++ b/app/src/main/res/layout/item_goleador.xml
@@ -102,6 +102,7 @@
         />
 
     <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/goleador_foto"
         android:layout_width="50dp"
         android:layout_height="50dp"
         android:src="@drawable/hector_chavez"
@@ -121,7 +122,8 @@
         app:layout_constraintTop_toTopOf="parent"/>
 
     <androidx.appcompat.widget.AppCompatImageView
-        android:layout_width="wrap_content"
+        android:id="@+id/goleador_equipo_escudo"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:src="@drawable/escudo_default"
         app:layout_constraintStart_toStartOf="@id/goleador_guideline_55_v"
