se agrego la vista de partido

--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -31,7 +31,9 @@
             <item
                 android:id="@+id/nav_codigo"
                 android:icon="@drawable/ic_menu_send"
-                android:title="@string/menu_codigo" />
+                android:title="@string/menu_codigo"
+                />
+
         </menu>
     </item>
 
