Añadi un visualizador que te muestra en que elemento del recyclerview estas, tanto en la de Claendario como la de miEquipo, tambien ya funciona el chat, aunque todavia no hace validaciones con usuarios, y ya integré la base de datos a dicha pantalla de Foro

--- a/app/src/main/res/layout/fragment_foro.xml
+++ b/app/src/main/res/layout/fragment_foro.xml
@@ -4,17 +4,32 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <TextView
-        android:id="@+id/text_tools"
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:id="@+id/fragment_foro_recyclerview"
+        android:layout_width="match_parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+
+        android:layout_height="wrap_content"/>
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/fragment_foro_message_input"
+        app:layout_constraintBottom_toTopOf="@id/fragment_foro_sendmessage_button"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        android:hint="Ingresa tu mensaje..."
+        android:layout_width="match_parent"
+        android:layout_height="150dp"/>
+
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/fragment_foro_sendmessage_button"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:text="Foro fragment"
-        android:textSize="20sp"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        android:text="Enviar mensaje"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        />
 </androidx.constraintlayout.widget.ConstraintLayout>
