validacion codigos hash, sin funcionar correctamente

--- a/app/src/main/res/layout/fragment_codigo.xml
+++ b/app/src/main/res/layout/fragment_codigo.xml
@@ -17,4 +17,24 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
+    <androidx.appcompat.widget.AppCompatEditText
+        android:id="@+id/tf_clavehash"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintTop_toBottomOf="@id/text_send"
+        app:layout_constraintStart_toStartOf="parent">
+
+    </androidx.appcompat.widget.AppCompatEditText>
+    <androidx.appcompat.widget.AppCompatButton
+        android:id="@+id/btn_enviar_hash"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toBottomOf="@id/tf_clavehash"
+        android:text="botonazo"
+        ></androidx.appcompat.widget.AppCompatButton>
+
+
+
 </androidx.constraintlayout.widget.ConstraintLayout>
